<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rowName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rowNameText"
            android:textStyle="bold"
            android:textColor=" #000000" />

        <TextView
            android:id="@+id/rowStartingTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/rowStartingTimeText"
            android:textColor=" #000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/rowAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rowAddressText"
        android:textColor=" #000000" />

</LinearLayout>