<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/credentialsTvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/credentialsTvUsernameText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/credentialsEtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/credentialsEtUsernameWidth"
        android:layout_below="@+id/credentialsTvUsername"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/credentialsTvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/credentialsEtUsername"
        android:layout_marginTop="61dp"
        android:text="@string/credentialsTvPasswordText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/credentialsEtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/credentialsEtPasswordWidth"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/credentialsTvPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/credentialsBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="101dp"
        android:text="@string/credentialsBtnLoginText" />

</RelativeLayout>